tests/test_error_reserved_word.err
Error in line 2: Illegal use of reserved word "main".
