tests/test_error_reserved_word.uk
def main() void{
    int main;
    return();
}
